fix idp on new config microservice